--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h6 {
 
 h1 {
 	font-size: clamp(6rem, 10vw, 20rem);
+	line-height: 0.75;
 }
 
 h2 {
@@ -253,7 +254,7 @@ body {
 
 				/* font-family: sans-serif; */
 				opacity: 0.75;
-				opacity: 0.25;
+				opacity: 0.15;
 				font-size: 400%;
 				color: var(--color-secondary);
 			}
