--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ body {
 		> img,
 		> iframe {
 			margin: 0;
-			border: 1.25rem solid white;
+			border: clamp(0.75rem, 3vw, 1.25rem) solid white;
 			box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 		}
 
